[package]
name = "counter_yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.7.16"
ic-cdk-macros = "0.5.6"

#anyhow = "1.0.58"
#colors-transform = "0.2.11"
#
#contracts = "0.6.3"
#enum-utils = "0.1.2"
gloo-console = "0.2.1"
gloo-events = "0.1.2"
#image = "0.24.2"
#num-complex = "0.4"
#structopt = "0.3.26"
#strum_macros = "0.24.1"
#wasm-bindgen = "0.2.81"
#wee_alloc = "0.4.5"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }

## Source: https://github.com/yewstack/yew/blob/de613fa832139f96ebe030bfc93bb6982bd14b67/examples/counter/Cargo.toml
gloo = "0.8.0"
js-sys = "0.3"
wasm-bindgen = "0.2.82"
# BUGFIX Apple M1: cargo install --locked wasm-bindgen-cli - https://github.com/thedodd/trunk/pull/375



[dependencies.web-sys]
version = "0.3.58"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlSelectElement",
    "ImageData",
    "Performance",
    "Window",
]

[dev-dependencies]
grass = "0.11.0"

